# Shard

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  tests.yml  workflow.yml
concepts/components/: index.html
concepts/philosophy/: index.html
concepts/props/: index.html
concepts/slots/: index.html
concepts/state/: index.html
concepts/styles/: index.html
docs/: RELEASING.md  examples.md  index.md  roadmap.md  security.md
docs/concepts/: components.md  philosophy.md  props.md  slots.md  state.md  styles.md
docs/getting-started/: installation.md  project-setup.md  quickstart.md
docs/guides/: accessibility.md  composition.md  computed-values.md  htmx-and-alpine.md  lifecycle-hooks.md  nested-components.md  performance.md  testing.md  view-data.md
docs/interactivity/: actions.md  alpine.md  events.md  htmx.md
docs/reference/: api.md  cli.md  settings.md  template-tags.md
example/: components.py  demo_view_data.py  manage.py  urls.py  view_data.py  views.py
example/example/: settings.py  wsgi.py
example/templates/: dynamic.html  home.html
example/templates/components/: alert.css  alert.html  button.css  button.html  card.css  card.html  counter.css  counter.html  layout.css  layout.html  todo_list.css  todo_list.html  view_page.css  view_page.html
examples/: index.html
getting-started/installation/: index.html
getting-started/project-setup/: index.html
getting-started/quickstart/: index.html
guides/composition/: index.html
guides/computed-values/: index.html
guides/lifecycle-hooks/: index.html
guides/nested-components/: index.html
guides/testing/: index.html
interactivity/actions/: index.html
interactivity/alpine/: index.html
interactivity/events/: index.html
interactivity/htmx/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/settings/: index.html
reference/template-tags/: index.html
scripts/: axe_check.mjs  shard_a11y_precommit.sh
search/: search_index.json
shard/: __init__.py  a11y.py  a11y_samples.py  actions.py  apps.py  component.py  conf.py  context_processors.py  css_minify.py  debug.py  exceptions.py  htmx.py  props.py  registry.py  render.py  scoping.py  slots.py  state.py  styles.py  testing.py  urls.py  view_data.py  view_tree.py  views.py  weight.py
shard/management/commands/: shard_a11y.py  shard_doctor.py  shard_list.py  shard_report.py
shard/static/shard/js/: shard.js
shard/templates/shard/: scripts.html
shard/templatetags/: shard.py
tests/: conftest.py  settings.py  test_a11y.py  test_component.py  test_css_minify.py  test_dx.py  test_htmx.py  test_integration.py  test_management.py  test_props.py  test_registry.py  test_registry_dx.py  test_scoping.py  test_shard.py  test_state.py  test_styles.py  test_styles_minify.py  test_templatetags.py  test_testing.py  test_view_data.py  test_view_data_integration.py  test_views.py  test_weight.py
tests/support/: components.py
tests/templates/: minimal.html  stateful.html  with_alpine.html  with_computed.html  wrapper.css  wrapper.html
